[package]
name = "codex-account-switcher"
version = "0.1.0"
edition = "2021"
description = "Terminal account switcher for Codex with quota visibility"
license = "MIT"
repository = "https://github.com/midnight-roti/codex-account-switcher"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
crossterm = "0.28"
directories = "5"
rand = "0.8"
ratatui = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
url = "2"
webbrowser = "1"
